<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/add_details"/>
            <ImageView
                android:id="@+id/current_pic_view"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_dashboard_black_24dp" />
        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/name_title"/>

        <EditText
            android:id="@+id/itemName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name_placeholder"
            android:inputType=
                "textCapSentences|textAutoCorrect" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/category_title"/>

        <Spinner
            android:id="@+id/categorySpinner"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/material_title"/>

        <Spinner
            android:id="@+id/materialSpinner"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/season_title"/>

        <Spinner
            android:id="@+id/seasonSpinner"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/price_title"/>

        <EditText
            android:id="@+id/price"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/price_placeholder"
            android:inputType="numberDecimal" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/purchase_location_title"/>

        <Spinner
            android:id="@+id/purchaseSpinner"
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            android:onClick="saveProfile"
            android:text="@string/save_btn_take_photo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:id="@+id/submitNewItem"/>
    </LinearLayout>
</ScrollView>