<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_outfits">

    <fragment
        android:id="@+id/navigation_outfits"
        android:name="com.example.capsule.ui.outfitSuggestion.OutfitSuggestionFragment"
        android:label="@string/title_outfits"
        tools:layout="@layout/fragment_outfit_suggestions" />

    <fragment
        android:id="@+id/navigation_closet"
        android:name="com.example.capsule.ui.closet.ClosetFragment"
        android:label="@string/title_closet"
        tools:layout="@layout/fragment_closet" />

    <fragment
        android:id="@+id/navigation_stats"
        android:name="com.example.capsule.ui.stats.StatsViewPagerFragment"
        android:label="@string/title_stats"
        tools:layout="@layout/fragment_stats" />

    <fragment
        android:id="@id/navigation_tips"
        android:name="com.example.capsule.ui.tips.TipsFragment"
        android:label="@string/title_tips"
        tools:layout="@layout/fragment_tips"/>
</navigation>