<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/outfit_suggestion_title"
        android:textColor="@color/fifth"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginBottom="14dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginBottom="25dp">

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminate="true"/>

        <ImageView
            android:id="@+id/weather_iv"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:contentDescription="@string/weather_icon"/>

        <Space
            android:layout_width="10dp"
            android:layout_height="0dp"/>

        <TextView
            android:id="@+id/temperature_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="@color/fourth" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/outfit_suggestion_empty_state"
        android:visibility="gone"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="25dp">
        <ImageView
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/outfit"
            android:alpha="0.3"
            android:layout_marginBottom="10dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/outfit_suggestion_empty_header"
            android:textStyle="bold"
            android:textSize="20dp"
            android:textColor="@color/fifth"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/outfit_suggestion_empty_description"
            android:textSize="18dp"
            android:textColor="@color/fourth"
            android:textAlignment="center"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/outfit_suggestion_top_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/suggested_top_iv"
                android:scaleType="centerCrop"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/suggested_top"/>

            <Space
                android:layout_width="10dp"
                android:layout_height="0dp"/>

            <ImageView
                android:id="@+id/suggested_bottom_iv"
                android:scaleType="centerCrop"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/suggested_bottom"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/outfit_suggestion_bottom_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp">

            <ImageView
                android:id="@+id/suggested_outerwear_iv"
                android:scaleType="centerCrop"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/suggested_outerwear"/>

            <Space
                android:layout_width="10dp"
                android:layout_height="0dp"/>

            <ImageView
                android:id="@+id/suggested_shoes_iv"
                android:scaleType="centerCrop"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:contentDescription="@string/suggested_shoes"/>

        </LinearLayout>

    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/log_suggested_outfit_btn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_button_fifth"
        android:visibility="gone"
        android:text="@string/outfit_suggestion_wear"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:padding="10dp"
        android:layout_marginBottom="16dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/log_manual_outfit_btn"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/outfit_suggestion_log"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textColor="@color/fourth"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:background="@drawable/rounded_button_primary"
        android:padding="10dp"/>

</LinearLayout>