<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats_material_title"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:textSize="24dp"
        android:textStyle="bold"
        android:textColor="@color/fifth" />
    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/material_pie_chart"
        android:layout_marginTop="30dp"
        android:layout_gravity="center"
        android:layout_width="350dp"
        android:layout_height="350dp" />
    <ImageView
        android:id="@+id/material_empty_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/wardrobe"
        android:layout_gravity="center"
        android:alpha="0.5"
        android:visibility="gone"
        android:layout_marginTop="20dp"/>
    <TextView
        android:id="@+id/material_stats_empty_state"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats_empty_state"
        android:textAlignment="center"
        android:visibility="gone"
        android:layout_gravity="center"
        style="@style/ItemDetailsTextLabel"
        android:layout_marginTop="50dp"/>
    <TextView
        android:id="@+id/material_stats_empty_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stats_empty_description"
        android:layout_gravity="center"
        android:textSize="18dp"
        android:textColor="@color/fifth"
        android:visibility="gone"
        android:padding="10dp"/>

</LinearLayout>