<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".camera.SaveActivity">

    <ImageView
        android:id="@+id/image_preview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="100dp"
        android:scaleType="centerCrop"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/app_name"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/picture_retake_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="137dp"
        android:layout_marginEnd="45dp"
        android:background="@drawable/rounded_button_fifth"
        android:text="@string/camera_retake"
        android:textColor="@color/primary"
        app:layout_constraintEnd_toStartOf="@+id/picture_save_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_preview" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/picture_save_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="137dp"
        android:layout_marginEnd="56dp"
        android:background="@drawable/rounded_button_primary"
        android:text="@string/camera_save"
        android:textColor="@color/fifth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/picture_retake_button"
        app:layout_constraintTop_toBottomOf="@+id/image_preview" />


</androidx.constraintlayout.widget.ConstraintLayout>